Changelog
=========

1.10.3 (unreleased)
-------------------

- Implement Plone 5.1 compatibility [mathias.leimgruber]


1.10.2 (2017-07-03)
-------------------

- Introduce webkit-only mixin. [Kevin Bieri]


1.10.1 (2017-06-02)
-------------------

- Fix escaping of font type on fontface mixin. [Kevin Bieri]
- Provide background option for tab-list mixin. [Kevin Bieri]
- Introduce hyphenation mixin. [Bieri Kevin]


1.10.0 (2017-03-20)
-------------------

- Add uninstall profile [raphael-s]

- Make sure the default profile is installed when installing ftw.theming with
  quickinstaller. [raphael-s]


1.9.0 (2017-02-09)
------------------

- Update font-awesome to 4.7.0.
  [elioschmutz]


1.8.2 (2017-01-11)
------------------

- 1.8.1 was accidentally released from the wrong branch. Please use 1.8.2 instead.
  [Kevin Bieri]

- Use two columns for print layout.
  [Kevin Bieri]

- Avoid duplicate (mimetype) icons on "Image" types. [jone]

- Introduce new mixins

  - Introduce link-color helper
  - Introduce font-face helper
  - Introduce rem helper

  [Kevin Bieri]


1.8.0 (2016-10-06)
------------------

- Switch from "private" to "public" caching, since the CSS does
  not contain any user specific data. [jone]

- Fix caching for unpublished navigation roots by not using p.a.caching. [jone]

- Introduce appearance helper
  [Kevin Bieri]


1.7.1 (2016-09-26)
------------------

- Support replacing portal-type- and mimetype-icons. [jone]

- Fix support for mimetype icons having long names. [jone, mbaechtold]


1.7.0 (2016-09-22)
------------------

- Fix multi-fill support of embed-resource mixin,
  introducing a new syntax and signature. [Kevin Bieri]


1.6.1 (2016-08-08)
------------------

- Reduce tab hover state
  The current hover state will be always the selected state
  [Kevin Bieri]


1.6.0 (2016-07-18)
------------------

- Move zindex system from plonetheme.blueberry
  [Kevin Bieri]


1.5.2 (2016-07-06)
------------------
